# mnn-android-sdk

./: .envrc  .gitignore  BUILD_VERIFICATION.md  IMPLEMENTATION_VERIFIED.md  INTEGRATION_PLAN.md  LICENSE  LLM_DEMO_STATUS.md  MODEL_DOWNLOAD_GUIDE.md  NEXT_STEPS.md  PLAN.md  README.md  SETUP_COMPLETE.md  devbox.json  gradle.properties  gradlew  settings.gradle.kts  task.md
docs/: API.md  BUILDING.md  EXAMPLES.md  GETTING_STARTED.md
mnn-sdk/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
mnn-sdk/src/main/: AndroidManifest.xml
mnn-sdk/src/main/cpp/: CMakeLists.txt  mnn_engine.cpp  mnn_interpreter.cpp  mnn_llm.cpp  mnn_tensor.cpp
mnn-sdk/src/main/kotlin/com/mnn/sdk/: MNNConfig.kt  MNNEngine.kt  MNNException.kt  MNNInterpreter.kt  MNNLlm.kt  MNNModel.kt  MNNStubImpl.kt  MNNTensor.kt  TokenCountUtils.kt
mnn-sdk/src/test/kotlin/com/mnn/sdk/: MNNLlmTokenMetricsTest.kt  MNNStubTest.kt  MNNUnitTest.kt
sample/: build.gradle.kts  proguard-rules.pro
sample/src/main/: AndroidManifest.xml
sample/src/main/assets/models/: README.md
sample/src/main/kotlin/com/mnn/sample/: ChatAdapter.kt  ChatMessage.kt  MainActivity.kt  ModelDownloader.kt  PerformanceMetrics.kt
sample/src/main/kotlin/com/mnn/sample/model/: AdvancedModelDownloader.kt  ModelCatalog.kt
sample/src/main/res/layout/: activity_main.xml  activity_main_chat.xml  item_message.xml
sample/src/main/res/menu/: main_menu.xml
sample/src/main/res/values/: strings.xml
